Fix SVG alignment issue

--- a/main.css
+++ b/main.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 @font-face {
     font-family: Roboto-Bold;
     src: url("assets/roboto/Roboto-Bold.ttf");
@@ -190,7 +194,9 @@ html {
     display: block;
     left: 0;
     right: 0;
-    width: 100%;
+    width: calc(100% + 10px);
+    margin-left: -5px;
+    overflow: hidden;
 }
 
 .aboutInner {
@@ -221,7 +227,9 @@ html {
     margin-top: -1px;
     left: 0;
     right: 0;
-    width: 100%;
+    width: calc(100% + 10px);
+    margin-left: -5px;
+    overflow: hidden;
     z-index: 10;
 }
 
@@ -393,7 +401,9 @@ html {
 
 .upSlant {
     display: block;
-    width: 100%;
+    width: calc(100% + 10px);
+    margin-left: -5px;
+    overflow: hidden;
 }
 
 .scheduleInner {
@@ -451,7 +461,10 @@ html {
     margin-top: 296px;
     left: 0;
     right: 0;
-    width: 100%;
+    width: calc(100% + 10px);
+    margin-left: -5px;
+
+    overflow: hidden;
     z-index: 10;
 }
 
@@ -465,6 +478,11 @@ html {
 
 .scheduleInner a:hover {
     text-decoration: underline;
+}
+
+.speakersInner h1 {
+    text-align: center;
+    color: #333;
 }
 
 /* PRIZES */
